# costsense.ai

./: .gitignore  AGENTIC_ARCHITECTURE.md  AWS_TO_AZURE_REBRANDING_COMPLETE.md  AZURE_MIGRATION_SUMMARY.md  CODE_LOGIC_FLOW.md  DATABASE_INTEGRATION_SUMMARY.md  FULLY_AGENTIC_INTEGRATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  PLAN_DATABASE_INTEGRATION.md  PLAN_INFRA_PLANNER_AGENT.md  README.md  README_AZURE.md  docker-compose.azure.yml  docker-compose.yml  setup.sh  start-azure.sh  start-dev.sh
.claude/: instructions.md
CostSense2.0/: .env.azure.example  (+14 more)
CostSense2.0/backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
CostSense2.0/backend/alembic/: env.py
CostSense2.0/backend/app/: __init__.py  cache.py  config.py  database.py  logging_config.py  main.py
CostSense2.0/backend/app/adapters/: __init__.py  aws_adapter.py  azure_adapter.py  base.py  gcp_adapter.py  registry.py
CostSense2.0/backend/app/agents/: __init__.py  base.py  cost_analysis_agent.py  explanation_agent.py  optimization_agent.py  orchestrator.py
CostSense2.0/backend/app/ai/: __init__.py  function_calling.py  ollama_client.py  prompts.py
CostSense2.0/backend/app/integrations/: __init__.py  servicenow.py
CostSense2.0/backend/app/middleware/: __init__.py  auth.py
CostSense2.0/backend/app/models/: __init__.py  audit.py  cost.py  investigation.py  ticket.py  user.py
CostSense2.0/backend/app/routers/: __init__.py  chat.py  costs.py  investigations.py  tickets.py
CostSense2.0/backend/app/utils/: audit.py
CostSense2.0/backend/scripts/: seed_data.py
(+179 files in other folders)
